<resources>
    <string name="app_name">BakingApp</string>

    <string name="recipes_no_of_servings">%d Servings</string>
    <string name="action_prev">Prev</string>
    <string name="action_next">Next</string>
    <string name="title_baking_time">Baking Time</string>
    <string name="title_recipe">%1$s Recipe</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="msg_ingredient">%1$ss of %2$s</string>
    <string name="label_recipe_steps">Recipe Steps</string>
    <string name="widget_text_no_content">No Recipe Selected</string>
</resources>
